[project]
name = "telegrep"
version = "0.1.0"
description = "Find (and optionally forward) Telegram messages from a specific folder if they match against a list of keywords"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ruff>=0.15.3",
    "telethon>=1.39.0",
]
